modif ch1 sf paragraphe trautmann

--- a/part1/chap1.tex
+++ b/part1/chap1.tex
@@ -8,9 +8,9 @@
 \chapter{Ordonnancement, ressources cumulatives et énergie}
 
 Dans ce chapitre, nous commençons par définir ce qu'est un problème
-d'ordonnancement et quelles sont les principales caractéristiques de
-ces problèmes. Ensuite, nous présenterons deux exemples de problèmes
-d'ordonnancement cumulatifs que nous utiliserons tout au long de ce
+d'ordonnancement et quelles sont les principales caractéristiques d'un
+tel problème. Ensuite, nous présenterons deux exemples de problèmes
+d'ordonnancement cumulatif que nous utiliserons tout au long de ce
 manuscrit, le problème d'ordonnancement de projet à contraintes de
 ressources (RCPSP) et le problème cumulatif (CuSP). Nous montrerons
 ensuite les limites de ces problèmes en termes de modélisation des
