--- a/part1/conclusion.tex
+++ b/part1/conclusion.tex
@@ -5,14 +5,14 @@ Dans ce chapitre, nous avons d'abord introduit les principales
 caractéristiques des problèmes d'ordonnancement avant de nous intéresser
 en particulier aux problèmes cumulatifs. Nous avons ensuite présenté
 deux des principaux problèmes étudiés en ordonnancement sous
-contrainte de ressource. Les limitations de ces problèmes en termes de
+contraintes de ressource. Les limitations de ces problèmes en termes de
 modélisation d'activités à profils variables ont ensuite
 été démontrées et une nouvelle modélisation de la consommation de
 ressource nous a permis de définir un nouveau problème: le
 \CECSP. 
 
 Dans un premier temps, nous avons comparé ce problème avec les
-problème existant dans la littérature, puis nous avons présenté un
+problèmes existant dans la littérature, puis nous avons présenté un
 ensemble de propriétés qui va nous permettre, dans la suite de ce
 manuscrit, de décrire des techniques pour sa résolution. La plupart de
 ces techniques sont adaptées de techniques existantes et peuvent être
